# read-together-api

./: .gitignore  Cargo.toml  Rocket.toml
db/migrations/2022-02-27-121714_initial_setup/: up.sql
migrations/2022-02-27-121714_initial_setup/: down.sql  up.sql
migrations/2022-04-09-092432_add_admin_column_for_a_group/: down.sql  up.sql
migrations/2022-04-11-145329_add_unique_key_for_user_email_and_group_name/: down.sql  up.sql
src/: main.rs  schema.rs
src/config/: app_config.rs  database.rs  mod.rs
src/controllers/: groups_controller.rs  mod.rs  users_controller.rs
src/dtos/: group_creation_dto.rs  group_member_dto.rs  mod.rs  user_creation_dto.rs  user_dto.rs  user_sign_in_dto.rs  user_token_dto.rs
src/fairings/: logger.rs  mod.rs
src/guards/: current_user.rs  logger.rs  mod.rs
src/helpers/: error_formatter.rs  mod.rs  responses.rs
src/models/: group.rs  mod.rs  plan_content_user_activity.rs  user.rs  user_token.rs
src/services/: group_creation_service.rs  mod.rs  user_creation_service.rs  user_sign_in_service.rs  user_sign_out_service.rs  user_token_creation_service.rs
