[package]
name = "read-together-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
bcrypt = "0.12.0"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.8", features = ["chrono"] }
diesel_migrations = "1.4.0"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_mysql_pool"]

