[package]
name = "read-together-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.12.0"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.8", features = ["chrono"] }
diesel-derive-enum = { version = "1.1.2", features = ["mysql"] }
diesel_migrations = "1.4.0"
figment = { version = "0.10.6", features = ["toml"] }
regex = "1.5.5"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde_json = "1.0.79"
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
uuid = { version = "0.8.2", features = ["v4"] }
validator = { version = "0.12", features = ["derive"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_mysql_pool"]

